# book_parser

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  pyproject.toml
.cargo/: log_directives
.github/workflows/: errors.yml
examples/: test.rs
src/: annotate.rs  compile.rs  lib.rs  load.rs  main.rs  parse.rs  retry.rs  section.rs  translate.rs
src/translate/: mod.rs  tests.rs
src/tts/: chatterbox.py  kokoro.py  mod.rs
