cargo-features = ["codegen-backend"]
[package]
name = "book_parser"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
ask_llm = { version = "~2.2.1", default-features = false }
clap = { version = "^4.5.37", features = ["derive"] }
color-eyre = "^0.6.5"
dirs = "^6"
futures = "^0.3"
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter", "serde"] }
quick-xml = "^0.39"
regex = "^1"
reqwest = { version = "^0.13.2", default-features = false, features = ["json", "charset", "http2"] }
scraper = "^0.25.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
tokio = { version = "^1.49.0", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time"] }
tracing = "^0.1.44"
v_utils = { version = "^2.15.30" }
zip = "^8"

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"

[[example]]
name = "test"
path = "./examples/test.rs"
